example/basic.xl
import "foo"

var v1 int = 1
// var v2, v3 = 1 // error: cannot assign 1 values to 2 variables
// var v2, v3 = 1, 2, 3 // error: cannot assign 3 values to 2 variables
c1, c2 = 10, 20

fun mul(a int, b int) int {
  a * b
}

fun main int {
  var v2 = 0
  var v2 = 0
  v2 = 1

  c3 = v2

  v2 = mul(v1, c3)

  v2
}
